--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,7 +16,7 @@ compose-lottie = "6.4.0"
 compose-navigation = "2.8.9"
 constraintlayout = "2.2.1"
 constraintlayout-compose = "1.1.1"
-coil = "2.7.0"
+coil = "3.1.0"
 core-ktx = "1.15.0"
 core-splashscreen = "1.0.1"
 dagger = "2.55"
@@ -214,11 +214,12 @@ jetpack-sqlite-framework-iosx64 = { module = "androidx.sqlite:sqlite-framework-i
 sqlcipher-android = { module = "net.zetetic:sqlcipher-android", version.ref = "sqlcipher-android" }
 
 # Media libs
-coil = { module = "io.coil-kt:coil", version.ref = "coil" }
-coil-svg = { module = "io.coil-kt:coil-svg", version.ref = "coil" }
-coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coil" }
-coil-gif = { module = "io.coil-kt:coil-gif", version.ref = "coil" }
-coil-video = { module = "io.coil-kt:coil-video", version.ref = "coil" }
+coil = { module = "io.coil-kt.coil3:coil", version.ref = "coil" }
+coil-svg = { module = "io.coil-kt.coil3:coil-svg", version.ref = "coil" }
+coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil" }
+coil-gif = { module = "io.coil-kt.coil3:coil-gif", version.ref = "coil" }
+coil-video = { module = "io.coil-kt.coil3:coil-video", version.ref = "coil" }
+coil-network = { module = "io.coil-kt.coil3:coil-network-okhttp", version.ref = "coil" }
 telephoto-zoomable-image = { module = "me.saket.telephoto:zoomable-image", version.ref = "telephoto" }
 telephoto-zoomable-image-coil = { module = "me.saket.telephoto:zoomable-image-coil", version.ref = "telephoto" }
 media3-exoplayer-core = { module = "androidx.media3:media3-exoplayer", version.ref = "media3-exoplayer" }
