--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ appcompat = "1.7.0"
 bitcoinj-core = "0.16.3"
 biometric = "1.4.0-alpha02"
 camera = "1.4.1"
+cash-app-paging = "3.3.0-alpha02-0.5.1"
 compose-bom = "2025.03.00"
 compose-lottie = "6.4.0"
 compose-navigation = "2.8.9"
@@ -31,7 +32,7 @@ jetpack-test-core = "1.6.1"
 jetpack-test-ext = "1.2.1"
 jetpack-datastore = "1.1.3"
 jetpack-lifecycle = "2.8.7"
-jetpack-paging = "3.3.6"
+jetpack-paging = "3.3.0-alpha02" # blocked by cash-app-multiplatform
 jetpack-room = "2.7.0-rc02"
 jetpack-sqlite = "2.5.0-rc02"
 jetpack-webkit = "1.13.0"
@@ -126,9 +127,12 @@ navigation-compose = { module = "androidx.navigation:navigation-compose", versio
 navigation-hilt = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hilt" }
 navigation-material = { module = "com.google.accompanist:accompanist-navigation-material", version.ref = "accompanist" }
 
+# Paging
 paging-runtime = { module = "androidx.paging:paging-runtime", version.ref = "jetpack-paging" }
 paging-common = { module = "androidx.paging:paging-common", version.ref = "jetpack-paging" }
 paging-compose = { module = "androidx.paging:paging-compose", version.ref = "jetpack-paging" }
+cash-app-paging = { module = "app.cash.paging:paging-common", version.ref = "cash-app-paging" }
+cash-app-paging-runtime-uikit = { module = "app.cash.paging:paging-runtime-uikit", version.ref = "cash-app-paging" }
 
 # Camera
 androidx-camera-core = { group = "androidx.camera", name = "camera-core", version.ref = "camera" }
