fix issue with package

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -74,7 +74,6 @@ sqlcipher-android = "4.6.1"
 telephoto = "0.14.0"
 timber = "5.0.1"
 url-detector = "0.1.23"
-kummons-uri = "2.8.0"
 
 [libraries]
 # Core libs
@@ -153,9 +152,6 @@ hilt-compiler-dagger = { module = "com.google.dagger:hilt-compiler", version.ref
 hilt-compiler-android = { module = "com.google.dagger:hilt-android-compiler", version.ref = "dagger" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "dagger" }
 
-# KMP Uri
-kummons-uri = { module = "com.bkahlert.kommons:kommons-uri", version.ref = "kummons-uri" }
-
 # KMP Koin DI
 koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin-bom" }
 koin-core = { module = "io.insert-koin:koin-core" }
@@ -169,6 +165,7 @@ koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", versi
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okhttp-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
 okhttp-mockwebserver = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "okhttp" }
+ktor-http = { module = "io.ktor:ktor-http", version.ref = "ktor" }
 ktor-client-auth = { module = "io.ktor:ktor-client-auth", version.ref = "ktor" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
