--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -39,6 +39,7 @@ jetpack-room = "2.7.0-rc02"
 jetpack-sqlite = "2.5.0-rc02"
 jetpack-webkit = "1.13.0"
 junit = "4.13.2"
+korlibs-crypto = "6.0.0"
 ktlint-wrapper-plugin = "12.2.0"
 kotest = "5.9.0"
 koin-bom = "4.0.2"
@@ -83,6 +84,7 @@ androidx-webkit = { module = "androidx.webkit:webkit", version.ref = "jetpack-we
 bignum = { module = "com.ionspin.kotlin:bignum", version.ref = "bignum" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "core-splashscreen" }
+korlibs-crypto = { module = "com.soywiz:korlibs-crypto", version.ref = "korlibs-crypto" }
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "jetpack-lifecycle" }
 androidx-lifecycle-process = { group = "androidx.lifecycle", name = "lifecycle-process", version = "lifecycle" }
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
