--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-accompanist = "0.34.0"
+accompanist = "0.36.0"
 activity-compose = "1.10.1"
 activity-ktx = "1.10.1"
 acinq-lightning-kmp = "1.8.4"
@@ -11,13 +11,13 @@ bignum = "0.3.10"
 bitcoinj-core = "0.16.3"
 biometric = "1.4.0-alpha02"
 camera = "1.4.1"
-compose-bom = "2025.03.00"
+compose-bom = "2025.04.00"
 compose-lottie = "6.4.0"
 compose-navigation = "2.8.9"
 constraintlayout = "2.2.1"
 constraintlayout-compose = "1.1.1"
 coil = "3.1.0"
-core-ktx = "1.15.0"
+core-ktx = "1.16.0"
 core-splashscreen = "1.0.1"
 dagger = "2.55"
 detekt = "1.23.8"
@@ -32,11 +32,11 @@ jetpack-arch-core-testing = "2.2.0"
 jetpack-test-runner = "1.6.2"
 jetpack-test-core = "1.6.1"
 jetpack-test-ext = "1.2.1"
-jetpack-datastore = "1.1.3"
+jetpack-datastore = "1.1.4"
 jetpack-lifecycle = "2.8.7"
 jetpack-paging = "3.3.6"
-jetpack-room = "2.7.0-rc02"
-jetpack-sqlite = "2.5.0-rc02"
+jetpack-room = "2.7.0"
+jetpack-sqlite = "2.5.0"
 jetpack-webkit = "1.13.0"
 junit = "4.13.2"
 korlibs-crypto = "6.0.0"
@@ -52,11 +52,11 @@ kotlinx-io = "0.7.0"
 kotlinx-serialization-json = "1.8.0"
 ksp = "2.1.10-1.0.31"
 ktlint_compose_rules = "0.3.17"
-ktor = "3.1.1"
-ktorfit = "2.4.1"
+ktor = "3.1.2"
+ktorfit = "2.5.0"
 markwon = "4.6.2"
 material-icons = "1.7.8"
-media3-exoplayer = "1.5.1"
+media3-exoplayer = "1.6.0"
 napier = "2.7.1"
 mockk = "1.13.12"
 okhttp = "4.12.0"
@@ -134,6 +134,7 @@ lottie-compose = { module = "com.airbnb.android:lottie-compose", version.ref = "
 navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "compose-navigation" }
 navigation-hilt = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hilt" }
 navigation-material = { module = "com.google.accompanist:accompanist-navigation-material", version.ref = "accompanist" }
+permissions-accompanist = { module = "com.google.accompanist:accompanist-permissions", version.ref = "accompanist" }
 
 # Paging
 paging-runtime = { module = "androidx.paging:paging-runtime", version.ref = "jetpack-paging" }
