--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -12,7 +12,7 @@ env:
 jobs:
   build:
     name: Build, sign and upload artifacts
-    runs-on: macos-latest
+    runs-on: macos-latest-large
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
@@ -65,7 +65,7 @@ jobs:
   release:
    name: Create GitHub release
    needs: build
-   runs-on: macos-latest
+   runs-on: ubuntu-latest
    steps:
    - name: Checkout code
      uses: actions/checkout@v4
