--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -12,7 +12,7 @@ env:
 jobs:
   build:
     name: Build, sign and upload artifacts
-    runs-on: macos-latest-large
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
