--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,61 +3,59 @@ accompanist = "0.36.0"
 activity-compose = "1.10.1"
 activity-ktx = "1.10.1"
 acinq-lightning-kmp = "1.8.4"
-acinq-bitcoin-kmp = "0.22.1"
-acinq-secp256k1-kmp = "0.17.1"
+acinq-bitcoin-kmp = "0.23.0"
+acinq-secp256k1-kmp = "0.17.3"
 agp = "8.10.0"
 appcompat = "1.7.0"
 barcode-scanning = "17.3.0"
 bignum = "0.3.10"
 bitcoinj-core = "0.16.3"
-biometric = "1.4.0-alpha03"
+biometric = "1.4.0-alpha04"
 camera = "1.4.2"
 compose-bom = "2025.05.01"
 compose-lottie = "6.4.0"
-compose-navigation = "2.8.9"
+compose-navigation = "2.9.0"
 constraintlayout = "2.2.1"
 constraintlayout-compose = "1.1.1"
-coil = "3.1.0"
+coil = "3.2.0"
 core-ktx = "1.16.0"
 core-splashscreen = "1.0.1"
 dagger = "2.55"
 detekt = "1.23.8"
 emoji2 = "1.5.0"
 espresso-core = "3.6.1"
-firebase = "33.12.0"
+firebase = "33.14.0"
 flippable = "1.5.4"
 google-services = "4.4.2"
+#noinspection GradleDependency
 guava = "33.0.0-android" # do not upgrade (added with zap settings, should be removed)
 hilt = "1.2.0"
 jetpack-arch-core-testing = "2.2.0"
 jetpack-test-runner = "1.6.2"
 jetpack-test-core = "1.6.1"
 jetpack-test-ext = "1.2.1"
-jetpack-datastore = "1.1.5"
-jetpack-lifecycle = "2.8.7"
+jetpack-datastore = "1.1.7"
+jetpack-lifecycle = "2.9.0"
 jetpack-paging = "3.3.6"
 jetpack-room = "2.7.1"
-jetpack-sqlite = "2.5.0"
+jetpack-sqlite = "2.5.1"
 jetpack-webkit = "1.13.0"
 junit = "4.13.2"
 korlibs-crypto = "6.0.0"
 ktlint-wrapper-plugin = "12.2.0"
 kotest = "5.9.0"
-koin-bom = "4.0.2"
-koinComposeMultiplatform = "4.0.2"
-koinCompose = "4.0.2"
-kotlin = "2.1.10"
-kotlinx-coroutines = "1.10.1"
+kotlin = "2.1.20"
+kotlinx-coroutines = "1.10.2"
 kotlinx-datetime = "0.6.2"
 kotlinx-io = "0.7.0"
-kotlinx-serialization-json = "1.8.0"
-ksp = "2.1.10-1.0.31"
+kotlinx-serialization-json = "1.8.1"
+ksp = "2.1.20-1.0.31"
 ktlint_compose_rules = "0.3.17"
 ktor = "3.1.2"
 ktorfit = "2.5.0"
 markwon = "4.6.2"
 material-icons = "1.7.8"
-media3-exoplayer = "1.6.1"
+media3-exoplayer = "1.7.1"
 napier = "2.7.1"
 mockk = "1.13.12"
 okhttp = "4.12.0"
@@ -69,12 +67,12 @@ qrcode-generator = "1.6.2"
 reorderable = "2.4.0"
 retrofit = "2.11.0"
 roboelectric = "4.13"
-security-app-authenticator = "1.0.0-beta01"
+security-app-authenticator = "1.0.0-rc01"
 security-crypto = "1.1.0-alpha07"
 security-identity-credential = "1.0.0-alpha03"
-skie = "0.10.1"
-sqlcipher-android = "4.7.2"
-telephoto = "0.15.1"
+skie = "0.10.2"
+sqlcipher-android = "4.9.0"
+telephoto = "0.16.0"
 timber = "5.0.1"
 url-detector = "0.1.23"
 whyoleg-cryptography-kotlin = "0.4.0"
@@ -160,15 +158,6 @@ hilt-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hilt" }
 hilt-compiler-dagger = { module = "com.google.dagger:hilt-compiler", version.ref = "dagger" }
 hilt-compiler-android = { module = "com.google.dagger:hilt-android-compiler", version.ref = "dagger" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "dagger" }
-
-# KMP Koin DI
-koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin-bom" }
-koin-core = { module = "io.insert-koin:koin-core" }
-koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koinComposeMultiplatform" }
-koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koinComposeMultiplatform" }
-koin-compose-viewmodel-navigation = { module = "io.insert-koin:koin-compose-viewmodel-navigation", version.ref = "koinComposeMultiplatform" }
-koin-android = { module = "io.insert-koin:koin-android", version.ref = "koinCompose" }
-koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koinCompose" }
 
 # Networking libs
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
@@ -294,7 +283,6 @@ kotest-assertions-core = { module = "io.kotest:kotest-assertions-core", version.
 kotest-assertions-json = { module = "io.kotest:kotest-assertions-json", version.ref = "kotest" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-coroutines" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
-
 
 [bundles]
 hilt = ["hilt-android", "navigation-hilt"]
