--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -76,6 +76,7 @@ telephoto = "0.16.0"
 timber = "5.0.1"
 url-detector = "0.1.23"
 whyoleg-cryptography-kotlin = "0.4.0"
+zoomimage-compose-coil3 = "1.3.0"
 
 [libraries]
 # Core libs
@@ -219,6 +220,7 @@ telephoto-zoomable-image-coil = { module = "me.saket.telephoto:zoomable-image-co
 telephoto-zoomable-peek-overlay = { module = "me.saket.telephoto:zoomable-peek-overlay", version.ref = "telephoto" }
 media3-exoplayer-core = { module = "androidx.media3:media3-exoplayer", version.ref = "media3-exoplayer" }
 media3-exoplayer-ui = { module = "androidx.media3:media3-ui", version.ref = "media3-exoplayer" }
+zoomimage-compose-coil3 = { module = "io.github.panpf.zoomimage:zoomimage-compose-coil3", version.ref = "zoomimage-compose-coil3" }
 
 # Loggers
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
